<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.evolution.device.DeviceExtras">

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="advanced_doze_settings"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title"
            android:summary="@string/ambient_display_gestures_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetClass="org.evolution.device.DeviceExtras.DozeSettingsActivity" />
        </Preference>

        <Preference
            android:key="kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/kcal_enabled_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.evolution.device.DeviceExtras.kcal.KCalSettingsActivity"
                android:targetPackage="org.evolution.device.DeviceExtras.kcal" />
       </Preference>

        <SwitchPreference
            android:key="dc"
            android:icon="@drawable/ic_dc_mode"
            android:title="@string/dc_mode_title"
            android:summary="@string/dc_mode_summary" />

        <SwitchPreference
            android:key="game_mode"
            android:icon="@drawable/ic_game_mode"
            android:title="@string/game_mode_title"
            android:summary="@string/game_mode_summary" />

        <SwitchPreference
            android:key="hbm"
            android:icon="@drawable/ic_hbm_mode"
            android:title="@string/hbm_mode_title"
            android:summary="@string/hbm_mode_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="auto_hbm"
            android:icon="@drawable/ic_autohbm_mode"
            android:title="@string/auto_hbm_title"
            android:summary="@string/auto_hbm_summary" />

        <org.evolution.device.DeviceExtras.AutoHBMThresholdPreference
            android:key="auto_hbm_threshold"
            android:icon="@drawable/ic_autohbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:summary="@string/auto_hbm_threshold_summary" />
			
        <Preference
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/hbm_mode_warning" 
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibrator"
        android:title="@string/category_vibrator">

        <org.evolution.device.DeviceExtras.CustomSeekBarPreference
            android:key="vib_strength"
            android:icon="@drawable/ic_vibration"
            android:title="@string/vib_strength_title_head"
            android:summary="@string/vib_strength_summary_head"
            android:persistent="true"
            android:max="3"
            android:min="0"
            settings:units=""
            android:defaultValue="3" />
    </PreferenceCategory>
</PreferenceScreen>
